# cpp-lecture-series

./: .gitignore  README.md  wip.cpp
code/: Card Shuffler.ipynb  main.cpp
code/Hello World/: CMakeLists.txt  main.cpp  main_cpp_11.cpp  main_enhanced.cpp
code/MilesToKM/: CMakeLists.txt  main.cpp
code/MilesToKM/include/: conversion.h
code/MilesToKM/src/: conversion.cpp
code/MilesToKMRefactored/: CMakeLists.txt
code/MilesToKMRefactored/include/: conversion.h
code/MilesToKMRefactored/src/: conversion.cpp
code/Multiple File Structure/: CMakeLists.txt  main.cpp
code/Multiple File Structure/doc/: README.md
code/Multiple File Structure/include/: geometric_utils.h
code/Multiple File Structure/src/: geometric_utils.cpp
code/Multiple File Structure/test/: geometric_utils_test.cpp
code/cs_2_grade_calculator/: CMakeLists.txt  grades.txt  main.cpp
labs/: In Class Exercise 1.ipynb  In Class Exercise 2.ipynb  In Class Exercise 3.ipynb  In Class Exercise 4.ipynb  Lab 2.ipynb  Lab 3 Solns.ipynb  Lab 3.ipynb  Lab 4 Solns.ipynb  Lab 4.ipynb  in_class_exercise_1.md  lab1.md
lectures/: Bubble Sort.ipynb  Control Flow.ipynb  Data Types.ipynb  Day 1.ipynb  File Input & Output.ipynb  Insertion Sort.ipynb  Intro to Arrays.ipynb  Intro to Pointers.ipynb  Intro to vectors.ipynb  Operators.ipynb  Over of Functions.ipynb  Overview & First Program.ipynb  Overview of Functions.ipynb  Pass by Value or Reference.ipynb  Selection Sort.ipynb  Statements & Expressions.ipynb  Testing.ipynb  Variables.ipynb  Work with Multiple Files.ipynb
(+1 files in other folders)
